--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: '2'
 
+networks:
+  elk:
+    driver: bridge
+
+volumes:
+  esdata:
+    driver: local
+
 services:
   config-server:
     image: springcommunity/spring-petclinic-config-server
@@ -7,6 +15,9 @@ services:
     mem_limit: 512M
     ports:
      - 8888:8888
+    environment:
+      - LOGSTASH_HOST=logstash
+      - LOGSTASH_PORT=5000
 
   discovery-server:
     image: springcommunity/spring-petclinic-discovery-server
@@ -17,6 +28,9 @@ services:
     entrypoint: ["./dockerize","-wait=tcp://config-server:8888","-timeout=60s","--","java", "org.springframework.boot.loader.JarLauncher"]
     ports:
      - 8761:8761
+    environment:
+      - LOGSTASH_HOST=logstash
+      - LOGSTASH_PORT=5000
 
   customers-service:
     image: springcommunity/spring-petclinic-customers-service
@@ -28,6 +42,9 @@ services:
     entrypoint: ["./dockerize","-wait=tcp://discovery-server:8761","-timeout=60s","--","java", "org.springframework.boot.loader.JarLauncher"]
     ports:
     - 8081:8081
+    environment:
+      - LOGSTASH_HOST=logstash
+      - LOGSTASH_PORT=5000
 
   visits-service:
     image: springcommunity/spring-petclinic-visits-service
@@ -39,6 +56,9 @@ services:
     entrypoint: ["./dockerize","-wait=tcp://discovery-server:8761","-timeout=60s","--","java", "org.springframework.boot.loader.JarLauncher"]
     ports:
      - 8082:8082
+    environment:
+      - LOGSTASH_HOST=logstash
+      - LOGSTASH_PORT=5000
 
   vets-service:
     image: springcommunity/spring-petclinic-vets-service
@@ -50,6 +70,9 @@ services:
     entrypoint: ["./dockerize","-wait=tcp://discovery-server:8761","-timeout=60s","--","java", "org.springframework.boot.loader.JarLauncher"]
     ports:
      - 8083:8083
+    environment:
+      - LOGSTASH_HOST=logstash
+      - LOGSTASH_PORT=5000
 
   api-gateway:
     image: springcommunity/spring-petclinic-api-gateway
@@ -61,6 +84,9 @@ services:
     entrypoint: ["./dockerize","-wait=tcp://discovery-server:8761","-timeout=60s","--","java", "org.springframework.boot.loader.JarLauncher"]
     ports:
      - 8080:8080
+    environment:
+      - LOGSTASH_HOST=logstash
+      - LOGSTASH_PORT=5000
 
   tracing-server:
     image: openzipkin/zipkin
@@ -81,6 +107,9 @@ services:
     entrypoint: ["./dockerize","-wait=tcp://discovery-server:8761","-timeout=60s","--","java", "org.springframework.boot.loader.JarLauncher"]
     ports:
      - 9090:9090
+    environment:
+      - LOGSTASH_HOST=logstash
+      - LOGSTASH_PORT=5000
 
   ## Grafana / Prometheus
 
@@ -97,3 +126,43 @@ services:
     mem_limit: 256M
     ports:
     - 9091:9090
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.6.0
+    container_name: elasticsearch
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - elk
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.6.0
+    container_name: logstash
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ./docker/logstash/pipeline:/usr/share/logstash/pipeline:ro
+      - ./docker/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+    ports:
+      - 5000:5000
+    networks:
+      - elk
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.6.0
+    container_name: kibana
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
+    networks:
+      - elk
