--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,45 @@
         <spring-cloud.version>2022.0.2</spring-cloud.version>
         <chaos-monkey-spring-boot.version>2.3.10</chaos-monkey-spring-boot.version>
         <jolokia-core.version>1.7.1</jolokia-core.version>
+        <logback.version>1.3.7</logback.version>
+        <slf4j.version>2.0.4</slf4j.version>
+        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
 
         <docker.image.prefix>springcommunity</docker.image.prefix>
         <docker.image.exposed.port>9090</docker.image.exposed.port>
-        <docker.image.dockerfile.dir>${basedir}</docker.image.dockerfile.dir>
+        <!-- <docker.image.dockerfile.dir>${basedir}</docker.image.dockerfile.dir>
         <docker.image.dockerize.version>v0.6.1</docker.image.dockerize.version>
-        <docker.plugin.version>1.2.0</docker.plugin.version>
+        <docker.plugin.version>1.2.0</docker.plugin.version> -->
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
+            </dependency>        
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-access</artifactId>
+                <version>${logback.version}</version>
+            </dependency>            
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+                <scope>test</scope>
+            </dependency>            
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>${logstash-logback-encoder.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -77,6 +106,7 @@
                         <artifactId>spring-boot-maven-plugin</artifactId>
                         <executions>
                             <execution>
+                                <id>generate-build-info</id>
                                 <!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties file is present -->
                                 <goals>
                                     <goal>build-info</goal>
@@ -89,6 +119,17 @@
                                     </additionalProperties>
                                 </configuration>
                             </execution>
+                            <execution>
+                                <id>build-docker-image</id>
+                                <goals>
+                                    <goal>build-image</goal>
+                                </goals>
+                                <configuration>
+                                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                                    <!-- If you need to use a specific builder, set it with: -->
+                                    <!-- <builder>...</builder> -->
+                                </configuration>
+                            </execution>                            
                         </executions>
                     </plugin>
 
@@ -116,7 +157,7 @@
             </build>
         </profile>
 
-        <profile>
+        <!-- <profile>
             <id>buildDocker</id>
             <build>
                 <pluginManagement>
@@ -155,7 +196,7 @@
                     </plugins>
                 </pluginManagement>
             </build>
-        </profile>
+        </profile> -->
     </profiles>
 
 </project>
