--- a/spring-petclinic-admin-server/pom.xml
+++ b/spring-petclinic-admin-server/pom.xml
@@ -17,8 +17,9 @@
 
     <properties>
         <spring-boot-admin.version>3.0.4</spring-boot-admin.version>
+        <spring-boot.build-image.imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</spring-boot.build-image.imageName>
         <docker.image.exposed.port>9090</docker.image.exposed.port>
-        <docker.image.dockerfile.dir>${basedir}/../docker</docker.image.dockerfile.dir>
+        <!-- <docker.image.dockerfile.dir>${basedir}/../docker</docker.image.dockerfile.dir> -->
     </properties>
 
     <dependencies>
@@ -57,7 +58,7 @@
     </dependencies>
 
     <profiles>
-        <profile>
+        <!-- <profile>
             <id>buildDocker</id>
             <build>
                 <plugins>
@@ -68,7 +69,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile> -->
     </profiles>
 
 </project>
