--- a/spring-petclinic-api-gateway/pom.xml
+++ b/spring-petclinic-api-gateway/pom.xml
@@ -20,8 +20,9 @@
         <webjars-angular.version>1.8.2</webjars-angular.version>
         <webjars-angular-ui-router.version>1.0.20</webjars-angular-ui-router.version>
         <wro4j.version>1.8.0</wro4j.version>
-        <docker.image.exposed.port>8081</docker.image.exposed.port>
-        <docker.image.dockerfile.dir>${basedir}/../docker</docker.image.dockerfile.dir>
+        <spring-boot.build-image.imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</spring-boot.build-image.imageName>        
+        <!-- <docker.image.exposed.port>8081</docker.image.exposed.port>
+        <docker.image.dockerfile.dir>${basedir}/../docker</docker.image.dockerfile.dir> -->
     </properties>
 
     <dependencies>
@@ -183,7 +184,7 @@
     </build>
 
     <profiles>
-        <profile>
+        <!-- <profile>
             <id>buildDocker</id>
             <build>
                 <plugins>
@@ -194,6 +195,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile> -->
     </profiles>
 </project>
