--- a/spring-petclinic-discovery-server/pom.xml
+++ b/spring-petclinic-discovery-server/pom.xml
@@ -45,7 +45,7 @@
     </dependencies>
 
     <profiles>
-        <profile>
+        <!-- <profile>
             <id>buildDocker</id>
             <build>
                 <plugins>
@@ -56,6 +56,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile> -->
     </profiles>
 </project>
