--- a/spring-petclinic-vets-service/pom.xml
+++ b/spring-petclinic-vets-service/pom.xml
@@ -15,8 +15,9 @@
 	</parent>
 
     <properties>
-        <docker.image.exposed.port>8081</docker.image.exposed.port>
-        <docker.image.dockerfile.dir>${basedir}/../docker</docker.image.dockerfile.dir>
+        <spring-boot.build-image.imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</spring-boot.build-image.imageName>    
+        <!-- <docker.image.exposed.port>8081</docker.image.exposed.port>
+        <docker.image.dockerfile.dir>${basedir}/../docker</docker.image.dockerfile.dir> -->
     </properties>
 
 	<dependencies>
@@ -129,7 +130,7 @@
 	</dependencies>
 
     <profiles>
-        <profile>
+        <!-- <profile>
             <id>buildDocker</id>
             <build>
                 <plugins>
@@ -140,6 +141,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile> -->
     </profiles>
 </project>
