--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,14 @@
         <java.version>17</java.version>
 
         <spring-cloud.version>2022.0.2</spring-cloud.version>
+        <jib-maven-plugin.version>3.3.2</jib-maven-plugin.version>
         <chaos-monkey-spring-boot.version>2.3.10</chaos-monkey-spring-boot.version>
         <jolokia-core.version>1.7.1</jolokia-core.version>
         <logback.version>1.3.7</logback.version>
         <slf4j.version>2.0.4</slf4j.version>
         <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
 
-        <docker.image.prefix>springcommunity</docker.image.prefix>
+        <docker.image.prefix>tc-demo</docker.image.prefix>
         <docker.image.exposed.port>9090</docker.image.exposed.port>
         <!-- <docker.image.dockerfile.dir>${basedir}</docker.image.dockerfile.dir>
         <docker.image.dockerize.version>v0.6.1</docker.image.dockerize.version>
@@ -118,20 +119,40 @@
                                     </additionalProperties>
                                 </configuration>
                             </execution>
-                            <execution>
+                            <!-- <execution>
                                 <id>build-docker-image</id>
                                 <goals>
                                     <goal>build-image</goal>
                                 </goals>
                                 <configuration>
                                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-                                    <!-- If you need to use a specific builder, set it with: -->
-                                    <!-- <builder>...</builder> -->
                                 </configuration>
-                            </execution>                            
+                            </execution>                             -->
                         </executions>
                     </plugin>
-
+                    <plugin>
+                      <groupId>com.google.cloud.tools</groupId>
+                      <artifactId>jib-maven-plugin</artifactId>
+                      <version>${jib-maven-plugin.version}</version>
+                      <configuration>
+                        <from>
+                          <!-- <image>... image reference to a manifest list ...</image> -->
+                          <platforms>
+                            <!-- <platform>
+                              <architecture>amd64</architecture>
+                              <os>linux</os>
+                            </platform> -->
+                            <platform>
+                              <architecture>arm64</architecture>
+                              <os>linux</os>
+                            </platform>
+                          </platforms>
+                        </from>
+                        <to>
+                          <image>${docker.image.prefix}/${project.artifactId}</image>
+                        </to>
+                      </configuration>
+                    </plugin>
                     <!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties file is present -->
                     <plugin>
                         <groupId>io.github.git-commit-id</groupId>
