--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
         <spring-cloud.version>2022.0.2</spring-cloud.version>
         <jib-maven-plugin.version>3.3.2</jib-maven-plugin.version>
         <chaos-monkey-spring-boot.version>2.3.10</chaos-monkey-spring-boot.version>
-        <jolokia-core.version>1.7.1</jolokia-core.version>
-        <logback.version>1.3.7</logback.version>
-        <slf4j.version>2.0.4</slf4j.version>
-        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
+        <jolokia-core.version>1.7.2</jolokia-core.version>
+        <logback.version>1.4.11</logback.version>
+        <slf4j.version>2.0.7</slf4j.version>
+        <logstash-logback-encoder.version>6.7</logstash-logback-encoder.version>
 
         <docker.image.prefix>tc-demo</docker.image.prefix>
         <docker.image.exposed.port>9090</docker.image.exposed.port>
@@ -145,7 +145,7 @@
                             <platform>
                               <architecture>arm64</architecture>
                               <os>linux</os>
-                            </platform>
+                            </platform>                       
                           </platforms>
                         </from>
                         <to>
@@ -154,7 +154,7 @@
                       </configuration>
                     </plugin>
                     <!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties file is present -->
-                    <plugin>
+                    <!-- <plugin>
                         <groupId>io.github.git-commit-id</groupId>
                         <artifactId>git-commit-id-maven-plugin</artifactId>
                         <executions>
@@ -172,7 +172,7 @@
                             <failOnNoGitDirectory>false</failOnNoGitDirectory>
                             <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
                         </configuration>
-                    </plugin>
+                    </plugin> -->
                 </plugins>
             </build>
         </profile>
