Make build great again

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
             <dependency>
                 <groupId>net.logstash.logback</groupId>
                 <artifactId>logstash-logback-encoder</artifactId>
-                <version>${logstash-logback-encoder.version}</version>
+                <version>6.6</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -142,10 +142,10 @@
                               <architecture>amd64</architecture>
                               <os>linux</os>
                             </platform> -->
-                            <platform>
-                              <architecture>arm64</architecture>
-                              <os>linux</os>
-                            </platform>                       
+<!--                            <platform>-->
+<!--                              <architecture>arm64</architecture>-->
+<!--                              <os>linux</os>-->
+<!--                            </platform>                       -->
                           </platforms>
                         </from>
                         <to>
